Fix unwanted padding in cancellation notice
Was making it too narrow on mobile.

--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,6 @@
 	--link-decoration: underline;
 }
 
-
 @media (min-width: 801px) {
 	#main ad-block:not(.floating) {
 		margin: 0.4em;
@@ -19,6 +18,11 @@
 }
 
 @media (max-width: 800px) {
+	#main {
+		padding-left: 6px;
+		padding-right: 6px;
+	}
+
 	#main ad-block.float-left, #main ad-block.float-right {
 		margin: 0;
 		float: none;
@@ -33,37 +37,6 @@ leaflet-map::part(popup) {
 	max-height: 60vh;
 	max-width: 60vw;
 	overflow: auto;
-}
-
-.breach.card {
-	background: #c8c8c8;
-}
-
-.breach.card.is-verified {
-	background: #f7c8c8;
-}
-
-.breach-tag {
-	font-size: 0.8rem;
-	padding: 0.2rem;
-	background: #ab3434;
-	color: #fafafa;
-	display: inline-block;
-	border-radius: 4px;
-	margin: 0.1rem;
-}
-
-a.breach-url[href="#"] {
-	pointer-events: none;
-	cursor: default;
-}
-
-a.breach-url[href="#"] .breach-title {
-	text-decoration: none;
-}
-
-a.breach-url[href="#"] .icon {
-	display: none;
 }
 
 article p:first-letter {
